* What is new in gsl-1.3:

** Changed interface for gsl_sf_coupling_6j...(...). The old functions
actually calculated 6j for a permutation of the arguments (that
related to Racah W). This was incorrect and not consistent with
the documentation. The new versions calculate < {a,b,c}, {d,e,f} >,
as stated in the documentation. The old versions are still available
as gsl_sf_coupling_6j_INCORRECT...(...), though they are deprecated
and will be removed at some point in the future.

** Added new functions for computing Em(x)=exp(-x)*Ei(x), the modified
(scaled) form of the exponential integral, gsl_sf_expint_E1_scaled,
gsl_sf_expint_E2_scaled, gsl_sf_expint_Ei_scaled.
   
** Fixed compilation problems with gcc -ansi and other ANSI compilers.

** Fixed uninitialized memory access in the Niederreiter quasi-random
number generator.

** Fixed the eigenvalue routines to prevent an infinite loop for Inf
or NaN entries in matrix.

** Fixed a bug in the multifit and multiroots allocation routines
which cause them to fail to report some out of memory conditions.

** Fixed a bug in the seeding for the random number generator
gsl_rng_taus2 which affected a small number of seeds.

** Modified the complex householder transforms to avoid division by
zero, which could cause NaNs to be returned by the gsl_eigen_hermv
eigenvalue decomposition.

** The Nelder-Mead simplex algorithm for multidimensional 
minimisation has been added.

** The random number distributions now include the Dirichlet and
Multinomial distributions.

** Added a new function gsl_fcmp for approximate comparison of
floating point numbers using Knuth's algorithm.

** Added new functions gsl_ldexp and gsl_frexp as portable
alternatives to ldexp() and frexp().

** Fixed a bug in gsl_linalg_bidiag_unpack_B which was returning
incorrect results for the superdiagonal.

** Fixed a bug in the acceptance condition for simulated annealing

** Ordinary differential equations can now be solved using a different