@@ -1,4 +1,10 @@
-* What is new in gsl-1.3:
+* What is new in gsl-1.4:
+
+** On platforms without IEEE comparisons gsl_{isnan,isinf,finite} will
+fall back to the system versions of isnan, isinf and finite if
+available.
+
+* What was new in gsl-1.3:
 
 ** Changed interface for gsl_sf_coupling_6j...(...). The old functions
 actually calculated 6j for a permutation of the arguments (that
